# forage-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
docs/site/: index.html  style.css
forage/: __init__.py  __main__.py  report.py
forage/agents/: base.py  evaluator.py  executor.py  planner.py
forage/core/: knowledge.py  loop.py  spec.py  tools.py  trajectory.py  (+1 more)
knowledge/: INDEX.md  web_scraping.md.v1backup
scripts/: compute_absolute_recall.py  compute_whitehouse_recall.py  export_fa_evolution.py  export_whitehouse_evolution.py  generate_paper_figures.py  migrate_knowledge_v1_to_v2.py  night2_q10_q6opus.sh  night_nvidia_sonnet_and_uniprot.sh  overnight_phase1.sh  run_q10_all.sh  seed_and_run.sh
tasks/: fa_2008_2012.yaml  fa_2010_2012.yaml  fa_2011.yaml  fa_2018_2020.yaml  first_proof_q10.yaml  first_proof_q10_sonnet.yaml  first_proof_q10_sonnet_cold.yaml  first_proof_q10_sonnet_seeded.yaml  first_proof_q6.yaml  first_proof_q6_sonnet_cold.yaml  first_proof_q6_sonnet_seeded.yaml  nvidia_gpu.yaml  nvidia_gpu_sonnet_cold.yaml  nvidia_gpu_sonnet_seeded.yaml  oil_gold_geopolitics.yaml  uniprot_alzheimer.yaml  uniprot_t2d.yaml  uniprot_t2d_sonnet.yaml  uniprot_t2d_sonnet_cold.yaml  uniprot_t2d_sonnet_seeded.yaml  uniprot_t2d_sonnet_seeded_deep.yaml  whitehouse_trump2.yaml  whitehouse_trump2_q1.yaml
tests/: test_comparison.py  test_executor.py  test_freeze_eval.py  test_integration.py  test_isolation_regression.py  test_knowledge.py  test_loop_v2.py  test_report.py  test_session.py  test_spec.py  test_trajectory.py  test_workspace.py
(+38 files in other folders)
