[project]
name = "forage"
version = "0.1.0"
description = "Autonomous data collection that discovers what 'complete' means"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]
# Note: uses `claude` CLI (Claude Code) as the LLM runtime via subprocess.
# No anthropic API key needed — uses existing OAuth login.
# Ensure `claude` is installed and authenticated: https://claude.ai/code

[project.scripts]
forage = "forage.__main__:main"
